<resources>
    <string name="app_name">Crear juego desde plantilla</string>
    <string name="memoria">memoria</string>
    <string name="lenguaje">lenguaje</string>
    <string name="orientacion">orientación</string>
    <string name="atencion">atención</string>
    <string name="visual">visual</string>
    <string name="title_activity_atencion">AtencionActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
