<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/barra"
        layout="@layout/barra" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/memo_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/amarillo"
                android:contentDescription="@string/memoria"
                app:srcCompat="@mipmap/memo" />

            <ImageButton
                android:id="@+id/leng_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/rosa"
                android:contentDescription="@string/lenguaje"
                app:srcCompat="@mipmap/lengua" />

            <ImageButton
                android:id="@+id/orien_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/verde"
                android:contentDescription="@string/orientacion"
                app:srcCompat="@mipmap/orienta" />

            <ImageButton
                android:id="@+id/aten_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/azuloscuro"
                android:contentDescription="@string/atencion"
                app:srcCompat="@mipmap/atencion" />

            <ImageButton
                android:id="@+id/visual_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purpura"
                android:contentDescription="@string/visual"
                app:srcCompat="@mipmap/visual" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/conten_memoria"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/amarillo"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10px"
                android:layout_marginVertical="10px"
                android:background="@color/blanco"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="6px"
                android:text="Nombre"
                android:textColor="@color/gris" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10px"
                android:layout_marginVertical="5px"
                android:background="@color/blanco"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="6px"
                android:text="Instrucción"
                android:textColor="@color/gris" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:orientation="horizontal">

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Guardar" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


